@@ -7,10 +7,9 @@ import calculator.operators.*;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
-import java.lang.reflect.Array;
-import java.security.PrivateKey;
-import java.util.ArrayList;
+
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -18,7 +17,7 @@ import static org.junit.jupiter.api.Assertions.fail;
 
 class TestComplexNumber {
 
-    private  int real1 , imaginary1, real2,imaginary2;
+    private  float real1 , imaginary1, real2,imaginary2;
     ComplexNumber complexNumber1, complexNumber2;
     private Calculator calc;
 
@@ -36,7 +35,7 @@ class TestComplexNumber {
 
     @Test
     void testToString() {
-        assertEquals(real1 + " + " + imaginary1 + "i", complexNumber1.toString());
+        assertEquals((int)real1 + " + " + (int)imaginary1 + "i", complexNumber1.toString());
     }
 
     @Test
@@ -45,7 +44,10 @@ class TestComplexNumber {
         try {
             Plus plus = new Plus(para);
             ComplexNumber result = new ComplexNumber(real1 + real2, imaginary1 + imaginary2);
-            assertEquals(result.toString(), calc.eval(plus).toString());
+            MyNumber number = calc.eval(plus);
+            assertEquals(result.getReal(), number.getReal());
+            assertEquals(result.getImaginary(), number.getImaginary());
+            assertEquals(result.toString(), number.toString());
         } catch (IllegalConstruction e) {
             fail();
         }
@@ -57,7 +59,10 @@ class TestComplexNumber {
         try {
             Minus minus = new Minus(para);
             ComplexNumber result = new ComplexNumber(real1 - real2, imaginary1 - imaginary2);
-            assertEquals(result.toString(), calc.eval(minus).toString());
+            MyNumber number = calc.eval(minus);
+            assertEquals(result.getReal(), number.getReal());
+            assertEquals(result.getImaginary(), number.getImaginary());
+            assertEquals(result.toString(), number.toString());
         } catch (IllegalConstruction e) {
             fail();
         }
@@ -69,7 +74,10 @@ class TestComplexNumber {
         try {
             Times times = new Times(para);
             ComplexNumber result = new ComplexNumber(real1 * real2 - imaginary1 * imaginary2, real1 * imaginary2 + real2 * imaginary1);
-            assertEquals(result.toString(), calc.eval(times).toString());
+            MyNumber number = calc.eval(times);
+            assertEquals(result.getReal(), number.getReal());
+            assertEquals(result.getImaginary(), number.getImaginary());
+            assertEquals(result.toString(), number.toString());
         } catch (IllegalConstruction e) {
             fail();
         }
@@ -81,16 +89,19 @@ class TestComplexNumber {
         try {
             Divides divides = new Divides(para);
             ComplexNumber result = new ComplexNumber((real1 * real2 + imaginary1 * imaginary2) / (real2 * real2 + imaginary2 * imaginary2), (real2 * imaginary1 - real1 * imaginary2) / (real2 * real2 + imaginary2 * imaginary2));
-            assertEquals(result.toString(), calc.eval(divides).toString());
+            MyNumber number = calc.eval(divides);
+            assertEquals(result.getReal(), number.getReal());
+            assertEquals(result.getImaginary(), number.getImaginary());
+            assertEquals(result.toString(), number.toString());
         } catch (IllegalConstruction e) {
             fail();
         }
     }
 
-   @Test
-    void testSqrtWithNumberNegatif() {
+    @Test
+    void testSqrtWithNumberMinus() {
         MyNumber number = new MyNumber(-1);
-        List<Expression> para = Arrays.asList(number);
+        List<Expression> para = List.of(number);
         try {
             Sqrt sqrt = new Sqrt(para);
             assertEquals(1, calc.eval(sqrt).getValue());
@@ -101,10 +112,22 @@ class TestComplexNumber {
 
     @Test
     void testModulus(){
-        List<Expression> para = Arrays.asList(complexNumber1);
+        List<Expression> para = Collections.singletonList(complexNumber1);
         try {
             Modulus modulus = new Modulus(para);
             assertEquals((int) Math.sqrt(real1 * real1 + imaginary1 * imaginary1), calc.eval(modulus).getValue());
+        } catch (IllegalConstruction e) {
+            fail();
+        }
+    }
+
+    @Test
+    void testDivides2(){
+        List<Expression> para = Arrays.asList(new ComplexNumber(5,1), new ComplexNumber(2,1));
+        try {
+            Divides divides = new Divides(para);
+            ComplexNumber result = new ComplexNumber(2,0);
+            assertEquals(result.toString(), calc.eval(divides).toString());
         } catch (IllegalConstruction e) {
             fail();
         }
